# screenstub

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  README.md  ci.nix  default.nix  derivation.nix  example-config.yml  flake.nix  home.nix  lock.nix  module.nix  nixos.nix
.github/workflows/: screenstub.yml
config/: Cargo.toml
config/src/: keymap.rs  lib.rs
ddc/: Cargo.toml
ddc/src/: ddc.rs  ddcutil.rs  lib.rs
event/: Cargo.toml
event/src/: lib.rs
fd/: Cargo.toml
fd/src/: lib.rs
qemu/: Cargo.toml
qemu/src/: lib.rs
qmp/: Cargo.toml
qmp/src/: lib.rs
samples/: config.yml
samples/sway/: config
samples/udev/rules.d/: 99-uinput.rules
samples/xorg.conf.d/: 30-screenstub.conf
src/: ddc.rs  error.rs  exec.rs  fd.rs  filter.rs  grab.rs  inputs.rs  main.rs  process.rs  qemu.rs  route.rs  send_async.rs  sources.rs  spawner.rs  util.rs
tokio-fd/: Cargo.toml
tokio-fd/src/: lib.rs
tokio-fuse/: Cargo.toml
tokio-fuse/src/: lib.rs
tokio-unzip/: Cargo.toml
tokio-unzip/src/: lib.rs
uinput/: Cargo.toml
uinput/src/: lib.rs
x/: Cargo.toml
x/src/: bounds.rs  context.rs  events.rs  lib.rs  motion.rs  util.rs  xinput.rs
