[package]
name = "screenstub"
version = "0.1.0"
edition = "2018"

[dependencies]
screenstub-config = { path = "config" }
screenstub-uinput = { path = "uinput" }
screenstub-event = { path = "event" }
screenstub-qemu = { path = "qemu" }
screenstub-ddc = { path = "ddc" }
screenstub-x = { path = "x" }
input-linux = { version = "^0.4.0", features = ["with-tokio"] }
tokio = { version = "^0.3.3", default-features = false, features = ["process", "rt-multi-thread"] }
failure = "^0.1.1"
futures = { version = "^0.3.5", features = ["thread-pool"] }
clap = "^2.30.0"
env_logger = "^0.8.1"
log = "^0.4.1"
serde_yaml = "^0.8.13"
enumflags2 = "^0.6.4"
result = "^1.0.0"
qapi = { version = "^0.7.0", features = ["qmp", "qga"] }

[features]
with-ddcutil = ["screenstub-ddc/with-ddcutil", "screenstub-config/with-ddcutil"]
with-ddc = ["screenstub-ddc/with-ddc", "screenstub-config/with-ddc"]
default = ["with-ddc"]

[workspace]
members = [
	"config",
	"uinput",
	"event",
	"qemu",
	"ddc",
	"x",
]
