[package]
name = "screenstub"
version = "0.1.0"
edition = "2018"

include = [
	"/src/**/*.rs",
	"/README*",
	"/COPYING*",
]

[dependencies]
screenstub-config = { path = "config" }
screenstub-uinput = { path = "uinput" }
screenstub-event = { path = "event" }
screenstub-qemu = { path = "qemu" }
screenstub-ddc = { path = "ddc" }
screenstub-x = { path = "x" }
input-linux = { version = "0.5", features = ["with-tokio"] }
tokio = { version = "1", default-features = false, features = ["process", "rt-multi-thread"] }
anyhow = "1"
futures = { version = "0.3", features = ["thread-pool"] }
clap = "2"
env_logger = "0.10"
log = "0.4"
serde_yaml = "0.9"
enumflags2 = "0.6"
result = "1"
ctrlc = { version = "3", features = ["termination"] }
qapi = { version = "0.11", features = ["qmp", "qga"] }

[features]
with-ddcutil = ["screenstub-ddc/with-ddcutil", "screenstub-config/with-ddcutil"]
with-ddc = ["screenstub-ddc/with-ddc", "screenstub-config/with-ddc"]
default = ["with-ddc"]

[workspace]
members = [
	"config",
	"uinput",
	"event",
	"qemu",
	"ddc",
	"fd",
	"x",
]
