[package]
name = "screenstub"
version = "0.1.0"
edition = "2018"

include = [
	"/src/**/*.rs",
	"/README*",
	"/COPYING*",
]

[dependencies]
screenstub-config = { path = "config" }
screenstub-uinput = { path = "uinput" }
screenstub-event = { path = "event" }
screenstub-qemu = { path = "qemu" }
screenstub-ddc = { path = "ddc" }
screenstub-x = { path = "x" }
input-linux = "0.6"
tokio = { version = "^1.0.0", default-features = false, features = ["process", "rt-multi-thread"] }
anyhow = "^1.0.42"
futures = { version = "^0.3.5", features = ["thread-pool"] }
clap = "4"
env_logger = "0.10"
log = "0.4"
serde_yaml = "^0.8.13"
enumflags2 = "^0.6.4"
result = "^1.0.0"
ctrlc = { version = "^3.1.9", features = ["termination"] }
qapi = { version = "0.11", features = ["qmp", "qga"] }

[features]
with-ddcutil = ["screenstub-ddc/with-ddcutil", "screenstub-config/with-ddcutil"]
with-ddc = ["screenstub-ddc/with-ddc", "screenstub-config/with-ddc"]
default = ["with-ddc"]

[workspace]
members = [
	"config",
	"uinput",
	"event",
	"qemu",
	"ddc",
	"fd",
	"x",
]
