[package]
name = "screenstub-config"
version = "0.0.1"
edition = "2018"

include = [
	"/src/**/*.rs",
	"/keymaps.csv",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde-hex = "0.1"
csv = "1"
enumflags2 = "0.6"
humantime-serde = "1"
input-linux = { version = "0.5", features = ["with-serde"] }
qapi-spec = { version = "0.3" }
qapi-qmp = { version = "0.11" }

[features]
with-ddcutil = []
with-ddc = []
