[package]
name = "screenstub-config"
version = "0.0.1"
edition = "2018"

include = [
	"/src/**/*.rs",
	"/keymaps.csv",
]

[dependencies]
serde = { version = "^1.0.27", features = ["derive"] }
serde-hex = "^0.1.0"
csv = "^1.1.3"
enumflags2 = "^0.6.4"
humantime-serde = "^1.0.0"
input-linux = { version = "0.6", features = ["serde"] }
qapi-spec = { version = "0.3" }
qapi-qmp = { version = "0.11" }

[features]
with-ddcutil = []
with-ddc = []
