[package]
name = "screenstub-ddc"
version = "0.0.1"
edition = "2018"

include = [
	"/src/**/*.rs",
]

[dependencies]
ddcutil = { version = "^0.0.3", optional = true }
ddc-hi = { version = "^0.4.0", optional = true }
mccs = { version = "^0.1.0", optional = true }
anyhow = "^1.0.42"

[features]
with-ddcutil = ["ddcutil"]
with-ddc = ["ddc-hi", "mccs"]
