[package]
name = "screenstub-ddc"
version = "0.0.1"
edition = "2018"

include = [
	"/src/**/*.rs",
]

[dependencies]
ddcutil = { version = "0.0.3", optional = true }
ddc-hi = { version = "0.4", optional = true }
mccs = { version = "0.1", optional = true }
anyhow = "1"

[features]
with-ddcutil = ["ddcutil"]
with-ddc = ["ddc-hi", "mccs"]
