[package]
name = "screenstub-qemu"
version = "0.0.1"
edition = "2018"

[dependencies]
futures = "^0.3.5"
failure = "^0.1.1"
log = "^0.4.1"
tokio = { version = "^1.0.0", default-features = false, features = ["time", "sync"] }
qapi = { version = "^0.8.0", features = ["qmp", "qga", "async-tokio-net", "async-tokio-spawn"] }
