[package]
name = "screenstub-qemu"
version = "0.0.1"
edition = "2018"

include = [
	"/src/**/*.rs",
]

[dependencies]
futures = "0.3"
anyhow = "1"
log = "0.4"
tokio = { version = "1", default-features = false, features = ["time", "sync"] }
qapi = { version = "0.11", features = ["qmp", "qga", "async-tokio-net", "async-tokio-spawn"] }
