[package]
name = "screenstub-uinput"
version = "0.0.1"
edition = "2018"

include = [
	"/src/**/*.rs",
]

[dependencies]
screenstub-fd = { version = "0.0.1", path = "../fd" }
input-linux = { version = "0.5", features = ["with-tokio"] }
futures = { version = "0.3", features = ["bilock", "unstable"] }
tokio = { version = "1", default-features = false, features = ["macros", "time", "io-util", "rt"] }
tokio-util = { version = "0.7", default-features = false, features = [ "codec" ] }
bytes = "1"
log = "0.4"
libc = "0.2"
