[package]
name = "screenstub-x"
version = "0.0.1"
edition = "2018"

[dependencies]
screenstub-fd = { version = "^0.0.1", path = "../fd" }
screenstub-config = { version = "^0.0.1", path = "../config" }
futures = { version = "^0.3.4", features = ["bilock", "unstable"] }
tokio = { version = "^1.0.0", default-features = false, features = ["rt-multi-thread"] }
anyhow = "^1.0.42"
xproto = { version = "^0.1.0", features = ["xtest", "xkb", "xinput", "dpms"], git = "https://github.com/arcnmx/xproto-rs", branch = "wip" }
xserver = { version = "^0.1.0", git = "https://github.com/arcnmx/xproto-rs", branch = "wip" }
enumflags2 = "^0.6.4"
input-linux = "^0.5.0"
log = "^0.4.1"
