[package]
name = "screenstub-x"
version = "0.0.1"
edition = "2018"

include = [
	"/src/**/*.rs",
]

[dependencies]
screenstub-fd = { version = "0.0.1", path = "../fd" }
futures = { version = "0.3", features = ["bilock", "unstable"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
anyhow = "1"
xcb = { version = "0.9", features = ["xtest", "xkb", "dpms"] }
input-linux = "0.5"
log = "0.4"
